Edits to see if local is now showing same as remote

--- a/Praesidium/Praesidium/Views/trafficking/Statistics.cshtml
+++ b/Praesidium/Praesidium/Views/trafficking/Statistics.cshtml
@@ -13,7 +13,7 @@
 <!-- Creates for all panels -->
 <div class="row">
     <!-- Left Side of Page -->
-    <div class="panel col-md-4">
+    <div class="col-md-4">
 
         <!-- Quick Facts section, created as a panel -->
         <div class="panel-heading text-center"><h2>U.S. Department of State Yearly Reports</h2></div>
@@ -37,9 +37,11 @@
                 <li><a href="http://www.state.gov/j/tip/rls/tiprpt/2001/index.htm"> 2001 Report </a></li>
             </ul>
         </div>
+        </div>
 
         <!-- Top Ten States Section -->
         <!-- Seperate Panel to Quick Facts -->
+    <div class="col-md-4">
         <div class="panel-heading text-center"><h2>Top 10 States with Most Reported Cases</h2></div>
         <div class="panel-body text-center" id="borders">
             <ol>
@@ -55,26 +57,10 @@
                 <li> North Carolina - 181 cases</li>
             </ol>
         </div>
-    </div>
-
-    <!-- Center of Page-->
-    <!-- Everything is on one panel -->
-    <div class="panel col-md-5">
-        <!-- Beginning header -->
-        <div class="panel-heading text-center"><h2>Whose effected the most?</h2></div>
-
-        <!-- Panel Body -->
-        <div class="panel-body" id="borders">
-
-            <!-- Gender Progress Bar -->
-            <object data="https://www.state.gov/documents/organization/258876.pdf" width="100%" height="400" type='application/pdf'>
-                <p>Sorry, the PDF couldn't be displayed</p>
-            </object>
-            </div>
-
-    <!-- Right Side of Page -->
-    <!-- Created as a panel -->
-    <div class="panel col-md-offset-9" id="borders">
+        </div>
+        <!-- Right Side of Page -->
+        <!-- Created as a panel -->
+    <div class="col-md-4">
         <div class="panel-heading text-center"><h2>Human Trafficing Resources</h2></div>
         <div class="panel-body text-center">
             <ul>
@@ -84,6 +70,23 @@
                 <li><a href="https://2009-2017.state.gov/j/tip/rls/fs/2016/259140.htm">International Programs to combat human trafficing</a></li>
             </ul>
         </div>
+        </div>
+
+
     </div>
 
+    <!-- Center of Page-->
+    <!-- Everything is on one panel -->
+<div class="panel col-md-8">
+    <!-- Beginning header -->
+    <div class="panel-heading text-center"><h2>2016 State Department human trafficing report</h2></div>
+
+    <!-- Panel Body -->
+    <div class="panel-body" id="borders">
+
+        <!-- Gender Progress Bar -->
+        <object data="https://www.state.gov/documents/organization/258876.pdf" width="100%" height="800" type='application/pdf'>
+            <p>Sorry, the PDF couldn't be displayed</p>
+        </object>
+    </div>
 </div>
