--- a/Praesidium/Praesidium/Views/trafficking/Statistics.cshtml
+++ b/Praesidium/Praesidium/Views/trafficking/Statistics.cshtml
@@ -62,11 +62,12 @@
         <!-- Created as a panel -->
     <div class="col-md-4">
         <div class="panel-heading text-center"><h2>Human Trafficing Resources</h2></div>
-        <div class="panel-body text-center">
+        <div class="panel-body text-center" id="borders">
             <ul>
                 <li><a href="https://humantraffickinghotline.org/states">Human Trafficking Hotline</a></li>
                 <li><a href="https://ucr.fbi.gov/crime-in-the-u.s/2015/crime-in-the-u.s.-2015/additional-reports/human-trafficking/table_3_human_trafficking_arrests_by_age_by_state_2015.xls"> FBI Human Trafficking Arrests, 2015</a></li>
                 <li><a href="https://ucr.fbi.gov/crime-in-the-u.s/2015/crime-in-the-u.s.-2015/additional-reports/human-trafficking/copy_of_humantrafficking_2015_final.pdf">FBI Human Trafficking Data Tables</a></li>
+                <li><a href="https://2009-2017.state.gov/j/tip/rls/fs/2016/259140.htm">International Programs to combat human trafficing</a></li>
                 <li><a href="https://2009-2017.state.gov/j/tip/rls/fs/2016/259140.htm">International Programs to combat human trafficing</a></li>
             </ul>
         </div>
