--- a/Praesidium/Praesidium/Views/trafficking/Statistics.cshtml
+++ b/Praesidium/Praesidium/Views/trafficking/Statistics.cshtml
@@ -13,12 +13,12 @@
 <!-- Creates for all panels -->
 <div class="row">
     <!-- Left Side of Page -->
-    <div class="panel col-md-4">
+    <div class="panel col-md-6">
 
         <!-- Quick Facts section, created as a panel -->
-        <div class="panel-heading text-center"><h2>U.S. Department of State Yearly Reports</h2></div>
         <div class="panel-body" id="borders">
-            <ul>
+            <h2 id="headers_borders">U.S. Department of State Yearly Reports</h2>
+            <ul id="p_text">
                 <li><a href="http://www.state.gov/j/tip/rls/tiprpt/2016/index.htm"> 2016 Report </a></li>
                 <li><a href="http://www.state.gov/j/tip/rls/tiprpt/2015/index.htm"> 2015 Report </a></li>
                 <li><a href="http://www.state.gov/j/tip/rls/tiprpt/2014/index.htm"> 2014 Report </a></li>
@@ -37,12 +37,13 @@
                 <li><a href="http://www.state.gov/j/tip/rls/tiprpt/2001/index.htm"> 2001 Report </a></li>
             </ul>
         </div>
-
+</div>
+    <div class="panel col-md-6">
         <!-- Top Ten States Section -->
         <!-- Seperate Panel to Quick Facts -->
-        <div class="panel-heading text-center"><h2>Top 10 States with Most Reported Cases</h2></div>
         <div class="panel-body text-center" id="borders">
-            <ol>
+            <h2 id="headers_borders">Top 10 States with Most Reported Cases</h2>
+            <ol style="color:lightgray; font-size:22px;">
                 <li> California - 1323 cases</li>
                 <li> Texas - 670 cases</li>
                 <li> Florida - 550 cases</li>
@@ -56,17 +57,16 @@
             </ol>
         </div>
     </div>
+  </div>
 
+<div class="row">
     <!-- Center of Page-->
     <!-- Everything is on one panel -->
-    <div class="panel col-md-5">
+    <div class="panel col-md-6">
         <!-- Beginning header -->
-        <div class="panel-heading text-center"><h2>Whose effected the most?</h2></div>
-
         <!-- Panel Body -->
         <div class="panel-body" id="borders">
-
-            <!-- Gender Progress Bar -->
+            <h2 id="headers_borders">Whose effected the most?</h2>
             <object data="https://www.state.gov/documents/organization/258876.pdf" width="100%" height="400" type='application/pdf'>
                 <p>Sorry, the PDF couldn't be displayed</p>
             </object>
@@ -74,16 +74,18 @@
 
     <!-- Right Side of Page -->
     <!-- Created as a panel -->
-    <div class="panel col-md-offset-9" id="borders">
-        <div class="panel-heading text-center"><h2>Human Trafficing Resources</h2></div>
-        <div class="panel-body text-center">
-            <ul>
-                <li><a href="https://humantraffickinghotline.org/states">Human Trafficking Hotline</a></li>
-                <li><a href="https://ucr.fbi.gov/crime-in-the-u.s/2015/crime-in-the-u.s.-2015/additional-reports/human-trafficking/table_3_human_trafficking_arrests_by_age_by_state_2015.xls"> FBI Human Trafficking Arrests, 2015</a></li>
-                <li><a href="https://ucr.fbi.gov/crime-in-the-u.s/2015/crime-in-the-u.s.-2015/additional-reports/human-trafficking/copy_of_humantrafficking_2015_final.pdf">FBI Human Trafficking Data Tables</a></li>
-                <li><a href="https://2009-2017.state.gov/j/tip/rls/fs/2016/259140.htm">International Programs to combat human trafficing</a></li>
-            </ul>
+</div>
+    <div class="row">
+        <div class="panel col-md-6" id="borders">
+            <div><h2 id="headers_borders">Human Trafficing Resources</h2></div>
+            <div class="panel-body text-center">
+                <ul id="p_textborders">
+                    <li><a href="https://humantraffickinghotline.org/states">Human Trafficking Hotline</a></li>
+                    <li><a href="https://ucr.fbi.gov/crime-in-the-u.s/2015/crime-in-the-u.s.-2015/additional-reports/human-trafficking/table_3_human_trafficking_arrests_by_age_by_state_2015.xls"> FBI Human Trafficking Arrests, 2015</a></li>
+                    <li><a href="https://ucr.fbi.gov/crime-in-the-u.s/2015/crime-in-the-u.s.-2015/additional-reports/human-trafficking/copy_of_humantrafficking_2015_final.pdf">FBI Human Trafficking Data Tables</a></li>
+                    <li><a href="https://2009-2017.state.gov/j/tip/rls/fs/2016/259140.htm">International Programs to combat human trafficing</a></li>
+                </ul>
+            </div>
         </div>
     </div>
-
 </div>
