Reverting to previous state

--- a/Praesidium/Praesidium/Views/CyberSecurity/Index.cshtml
+++ b/Praesidium/Praesidium/Views/CyberSecurity/Index.cshtml
@@ -5,56 +5,55 @@
 
 <div class="container">
     <div class="jumbotron" id="cyber_sec_jumbo">
-        <h1> Cyber Security</h1>
+        <h1> Cyber Security: Why It's Important</h1>
     </div>
 </div>
+ 
 
     <div class="row">
         <div class="col-md-8">  
 
-            
-                <h1 id="headers"><strong>The Dangers of the Internet</strong></h1>
-               <p id="p_text"> Cyber Security is a serious topic that nearly everyone deals with on a daily basis. Being safe online is of huge importance.
-                    This situation is life or death some people. Every single day children, partents and experts battle the bad guys. Consequenses
-                    of not being safe online could vary from loss of reputation, financial loss all the way to bodily harm and trafficking. The danger
-                    is real and must not be ignored. 
-              </p>  
-            
+            <p>
+                <h1><strong>The dangers of the Internet</strong></h1>
+                Cyber Security is a serious topic that nearly everyone deals with on a daily basis. Being safe online is of huge importance. This situation is life or death some people. Every single day children, partents and experts battle the bad guys. Consequenses of not being safe online could vary from loss of reputation, financial loss all the way to bodily harm and trafficking. The danger is real and must not be ignored. 
+                
+            </p>
 
         </div>
 
         <div class="col-md-4 align-center" id="borders">
-            <h3 id="headers_borders"><strong>Top 8 Tips for Kids to Protect Themselves Online</strong></h3>
-            <ul class="align-left" id="p_textborders">
+            <p class="h3" style="text-align:center;padding-top:8%;padding-bottom:5%;"><strong>Top 8 Tips for Kids to Protect Themselves Online</strong></p>
+            <ul class="align-left">
                 <li>Keep your computer up to date.</li>
                 <li>Never tell anyonee where you live</li>
                 <li>Never tell people where you work or go to school</li>
-                <li>Don't overshare with people you don't know</li>       
+                <li>Don't overshare with people you don't know</li>
+         
                 <li>Don't agree to meet strangers online</li>
                 <li>Don't accept files or send files to strangers</li>
                 <li>If you are uncomforatble at all tell a trusted adult.</li>
             </ul>
-            <a href="#" style="margin-left:95px;margin-bottom:10px;" class="btn btn-warning bt-md ">Check out the Article!</a></ br></ br>
+            <a href="#" style="margin-left:95px;" class="btn btn-warning bt-md ">Check out the Article!</a></ br></ br>
             </div>
-             
-            <div class="col-md-4 align-center" id="borders" style="float:right;">
+        
+            <div class="col-md-4 align-center" id="borders">
 
             <!-- Add another article link-->
-            <h3 id="headers_borders"><strong>Top Tips to Keeping your child safe online.</strong></h3>
-            <ul class="align-left" id="p_textborders">
+            <p class="h3" style="text-align:center;padding-top:8%;padding-bottom:5%;"><strong>Top Tips to Keeping your child safe online.</strong></p>
+            <ul class="align-left">
                 <li>Keep an eye on your child while they are using the internet</li>
                 <li>If you suspect inapropriate activity sit your child down and talk with them.</li>
                 <li>Monitor your childs chats and make sure they are with children their age and are approriate</li>
                 <li>Talk with your child about the dangers of the internet.</li>
                 
             </ul>
-            <a href="#" style="margin-left:95px;margin-bottom:-8px;" class="btn btn-danger bt-md">Check out the Article!</a>
+            <a href="#" style="margin-left:95px;" class="btn btn-danger bt-md">Check out the Article!</a>
             <br /><br />
         </div>
     </div>
 
     <!-- added in row for the glyphicon table-->
-    <div class="row container-fluid" style="margin-top:5px;margin-left:-10%">
+    <div class="row container-fluid" style="padding-top:7%;padding-left:-5%">
 
 
         <div id="Quick Tips" class="container-fluid text-center">
