--- a/Praesidium/Praesidium/Views/CyberSecurity/Resources.cshtml
+++ b/Praesidium/Praesidium/Views/CyberSecurity/Resources.cshtml
@@ -3,52 +3,34 @@
     ViewBag.Title = "Resources";
 }
 
-<div class="container-fluid" id="photo_cont" style="margin-bottom:3%;">
-<div class="row">
-    <div class="col-md-12">
-
-        <figure class="effect-caged">
-            <img src="~/Content/Images/test2.jpg" style="width:100%;max-height:330px;" />
-            <figcaption>
-                <h1>Resources</h1>
-            </figcaption>
-        </figure>
-
-    </div>
-
-</div>
-</div>
-
 <div class="row">
     <div class="col-md-8">
 
-        <h2 id="headers">How these Resources can help You</h2>
+        <p class="h2" style="text-align:center; color:slategray"><strong>How These Resources Can Help You</strong></p><br /><br />
 
-        <p id="p_text">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pharetra sapien eget tempor pulvinar. 
-            Nunc eleifend orci nec rutrum bibendum. Sed non enim ac elit malesuada venenatis. Suspendisse imperdiet 
-            dolor sit amet leo fermentum, sed pulvinar tellus cursus. Interdum et malesuada fames ac ante ipsum primis
-             in faucibus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Donec velit metus, facilisis a 
-            sodales non, scelerisque et est. Maecenas a sapien placerat, dignissim dui vestibulum, ultricies est. Praesent
-             non mauris non dolor ultricies tincidunt. Nulla tellus purus, venenatis eu magna in, ultrices pellentesque ligula. 
-            Donec elementum pulvinar ex, non mollis justo lacinia et. Sed commodo porta felis, quis viverra ligula auctor vel. 
-            Etiam elit lacus, vehicula vel finibus quis, semper vel lectus.
+
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pharetra sapien eget tempor pulvinar. Nunc eleifend orci nec rutrum bibendum. Sed non enim ac elit malesuada venenatis. Suspendisse imperdiet dolor sit amet leo fermentum, sed pulvinar tellus cursus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Donec velit metus, facilisis a sodales non, scelerisque et est. Maecenas a sapien placerat, dignissim dui vestibulum, ultricies est. Praesent non mauris non dolor ultricies tincidunt. Nulla tellus purus, venenatis eu magna in, ultrices pellentesque ligula. Donec elementum pulvinar ex, non mollis justo lacinia et. Sed commodo porta felis, quis viverra ligula auctor vel. Etiam elit lacus, vehicula vel finibus quis, semper vel lectus.
+
         </p>
 
     </div>
 
-    <div class="col-md-4 align-center " id="borders">
-        <h3 id="headers_borders">Most Viewed Links</h3>
-        <ul class="align-left" id="p_textborders">
+    <div class="col-md-4 align-center ">
+        <p class="h3" style="text-align:center;color:slategray;padding-top:25%;"><strong>Most Viewed Links</strong></p>
+        <ul class="align-left">
             <li><A HREF="http://praesidium.azurewebsites.net">Website1</A></li>
             <li><A HREF="http://praesidium.azurewebsites.net">Website2</A></li>
             <li><A HREF="http://praesidium.azurewebsites.net">Website3</A></li>
         </ul>
+
     </div>
-<div class="col-md-8" id="borders">
-    <h1 id="headers_borders">Top Cyber Security Resources</h1>
+</br>
+
+<div class="col-md-8">
+    <p class="h2" style="text-align:center; color:slategray"><strong>Top Cyber Security Resources</strong></p><br />
     <div class="col-md-8">
-        <ul id="p_textborders">
+        <ul>
             <li><a href="https://heimdalsecurity.com/blog/cyber-security-tips/">131 Cyber Security Tips that Anyone Can Apply</a></li>
             <li>Website2</li>
             <li>Website3</li>
