--- a/Praesidium/Praesidium/Views/CyberSecurity/Teachers.cshtml
+++ b/Praesidium/Praesidium/Views/CyberSecurity/Teachers.cshtml
@@ -3,45 +3,41 @@
     ViewBag.Title = "Teachers";
 }
 
-<div class="container-fluid" id="photo_cont" style="margin-bottom:3%;">
-    <div class="row">
-        <div class="col-md-12">
-            <figure class="effect-caged">
-                <img src="~/Content/Images/test1.jpg" style="width:100%;max-height:330px;" />
-                <figcaption>
-                    <h1> Cyber Security - Teachers</h1>
-                </figcaption>
-            </figure>
-        </div>
-    </div>
-</div>
 
 <div class="row">
     <div class="col-md-8">
-        <h2 id="headers">Parents</h2>
-        <p id="p_text">          
-            This is a page where teachers and other educators can learn tips and read articles and also access useful links to help educate thier students online.
-        </p>
- </div>
 
-    <div class="col-md-4 align-center" id="borders">
-        <h3 id="headers_borders">Teacher Page Links</h3>
-        <ul class="align-left" id="p_textborders">
+        <p class="h2" style="text-align:center; color:slategray"><strong>Teachers</strong></p><br /><br />
+
+
+        <p>
+            <h1>Welcome to the Teachers resource page for Cyber Security</h1>
+            This is a page where teachers and other educators can learn tips and read articles and also access useful links to help educate thier students online.
+
+        </p>
+
+    </div>
+    <div class="col-md-4 align-center ">
+        <p class="h3" style="text-align:center;color:slategray;padding-top:25%;"><strong>Teacher Page Links</strong></p>
+        <ul class="align-left">
             <li><A HREF="http://www.cox.com/wcm/en/aboutus/datasheet/takecharge/2009-teen-survey.pdf">COX Communications Report</A></li>
             <li><A HREF="http://www.innocentsatrisk.org">Innocents at Risk</A></li>
             <li><A HREF="https://humantraffickinghotline.org">Human Trafficking Hotline</A></li>
         </ul>
+
+        <br /><br />
+
     </div>
+
 </div>
+</br>
+
 <div class="col-md-8">
-
-    <h1 id="headers">Resources for staying safe Online</h1>
-    <div><p><br /></p></div>
-
+    <p class="h2" style="text-align:center; color:slategray"><strong>Resources for staying safe online</strong></p><br />
     <div class="well">
-        <h2 style="color:slategrey;text-align:center;"><strong>Article 1</strong></h2>
-        <p id="p_text">
-            <h3>Your responsibility as a teacher</h3>
+        <p class="h2" style="text-align:center; color:slategray"><strong>Article 1</strong></p><br />
+        <p>
+            <h2>Your responsibility as a teacher</h2>
             What is your responsibility as a teacher of youth or teens when it comes to educating them about being safe online? Is this the responsibility of the parents to educate thier children? Is there an age at which it is inappropriate to educate children on....
 
         </p>
@@ -49,11 +45,13 @@
     </div>
 
     <div class="well">
-        <h2 style="color:slategrey;text-align:center;"><strong>Article 2</strong></h2>
-        <p id="p_text">
-            <h3>How far is too far when it comes to helping a student?</h3>
+        <p class="h2" style="text-align:center; color:slategray"><strong>Article 2</strong></p><br />
+        <p>
+            <h2>How far is too far when it comes to helping a student?</h2>
             All teachers have been in this situation. You see as student in need and want to help them anyway you can, except this time its a student that is normally an A student and they are failing tests and cutting class, you want to get to the bottom of this...
         </p>
-   </div>
+
+    </div>
+
 </div>
 
