--- a/Praesidium/Praesidium/Views/trafficking/Adults.cshtml
+++ b/Praesidium/Praesidium/Views/trafficking/Adults.cshtml
@@ -3,6 +3,7 @@
     ViewBag.Title = "Adults";
 }
 
+<
 <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
     <!-- Indicators -->
     <ol class="carousel-indicators">
@@ -12,6 +13,7 @@
     </ol>
 
     <!-- Wrapper for slides -->
+
     <div class="carousel-inner">
         <div class="item active">
             <img src="~/Content/Images/test2.jpg" id="carousel_img" />
@@ -50,7 +52,6 @@
         </div>
     </div>
 
-
     <!-- Controls -->
     <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
         <span class="glyphicon glyphicon-chevron-left"></span>
@@ -60,9 +61,7 @@
     </a>
 </div>
 
-
-<!-- /Carousel -->
-
+<!-- Carousel -->
 
 <div class="row">
 
@@ -70,8 +69,8 @@
 
         <div class="row">
             <div class="col-md-12">
-                <h1 id="headers">Adults</h1>
-                <p class="lead" id="p_text">
+                <h1>Adults</h1>
+                <p class="lead">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pharetra sapien eget tempor pulvinar. Nunc eleifend orci nec rutrum
                     bibendum. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pharetra sapien eget tempor pulvinar. Nunc eleifend orci nec rutrum
                     bibendum. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pharetra sapien eget tempor pulvinar. Nunc eleifend orci nec rutrum
@@ -81,6 +80,7 @@
         </div>
 
         <div class="row">
+
             <div class="col-md-4 col-sm-8 teen_res">
                 <a href="#" class="thumbnail"><img src="~/Content/Images/test2.jpg" /></a>
                 <h2>Resource 1</h2>
