--- a/Praesidium/Praesidium/Views/trafficking/Resources.cshtml
+++ b/Praesidium/Praesidium/Views/trafficking/Resources.cshtml
@@ -4,7 +4,7 @@
 }
 <!-- Creates Panel for Entire Page -->
 <div class="panel panel-warning">
-    <h2 id="headers">Resources</h2>
+    <h2 class="text-center panel-heading">Resources</h2>
     
     <div class="panel-body">
         <!-- First Row of Resources -->
