--- a/Praesidium/Praesidium/Views/trafficking/Teachers.cshtml
+++ b/Praesidium/Praesidium/Views/trafficking/Teachers.cshtml
@@ -3,6 +3,7 @@
     ViewBag.Title = "Teachers";
 }
 
+
 <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
     <!-- Indicators -->
     <ol class="carousel-indicators">
@@ -12,6 +13,7 @@
     </ol>
 
     <!-- Wrapper for slides -->
+
     <div class="carousel-inner">
         <div class="item active">
             <img src="~/Content/Images/test2.jpg" id="carousel_img" />
@@ -59,15 +61,16 @@
     </a>
 </div>
 
-<!-- /Carousel -->
+<!-- Carousel -->
 
 <div class="row">
 
     <div class="col-xs-12">
+
         <div class="row">
             <div class="col-md-12">
-                <h1 id="headers">Teachers</h1>
-                <p class="lead" id="p_text">
+                <h1>Teachers</h1>
+                <p class="lead">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pharetra sapien eget tempor pulvinar. Nunc eleifend orci nec rutrum
                     bibendum. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pharetra sapien eget tempor pulvinar. Nunc eleifend orci nec rutrum
                     bibendum. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pharetra sapien eget tempor pulvinar. Nunc eleifend orci nec rutrum
