--- a/Praesidium/Praesidium/Views/CyberSecurity/Adults.cshtml
+++ b/Praesidium/Praesidium/Views/CyberSecurity/Adults.cshtml
@@ -3,58 +3,52 @@
     ViewBag.Title = "Adults";
 }
 
-<div class="container-fluid" id="photo_cont" style="margin-bottom:3%;">
-    <div class="row">
-        <div class="col-md-12">
-
-            <figure class="effect-caged">
-                <img src="~/Content/Images/test2.jpg" style="width:100%;max-height:330px;" />
-                <figcaption>
-                    <h1> Cyber Security - Adults</h1>
-                </figcaption>
-            </figure>
-
-        </div>
-
-    </div>
-</div>
 <div class="row">
     <div class="col-md-8">
-        <h2 id="headers">Parents</h2>
-        <p id="p_text">
-            This page is a resource for all adults, whether you are a parent, a grandparent, a police officer or even a official.
-             This page will provide you with articles about the importance of providing a safe online experience for children and
-             how you can go about that from your various roles.
+
+        <p class="h2" style="text-align:center; color:slategray"><strong>Parent</strong></p><br /><br />
+
+
+        <p>
+          <h1>Welcome to the Adult resource page for Cyber Security</h1>
+            This page is a resource for all adults, whether you are a parent, a grandparent, a police officer or even a official. This page will provide you with articles about the importance of providing a safe online experience for children and how you can go about that from your various roles.
         </p>
+
     </div>
-    <div class="col-md-4 align-center " id="borders">
-       <h3 id="headers_borders">Youth Page Links</h3>
-        <ul class="align-left" id="p_textborders">
+    <div class="col-md-4 align-center ">
+        <p class="h3" style="text-align:center;color:slategray;padding-top:25%;"><strong>Youth Page Links</strong></p>
+        <ul class="align-left">
             <li><A HREF="http://www.cox.com/wcm/en/aboutus/datasheet/takecharge/2009-teen-survey.pdf">COX Communications Report</A></li>
             <li><A HREF="http://www.innocentsatrisk.org">Innocents at Risk</A></li>
-            <li><A HREF="https://humantraffickinghotline.org">Human Trafficking Hotline</A></li>          
+            <li><A HREF="https://humantraffickinghotline.org">Human Trafficking Hotline</A></li>
+           
         </ul>
+
+        <br /><br />
+
     </div>
+
 </div>
+</br>
 
 <div class="col-md-8">
-   <h1 id="headers">Resources for staying safe Online</h1>
-    <div><p><br /></p></div>
+    <p class="h2" style="text-align:center; color:slategray"><strong>Resources for staying safe online</strong></p><br />
     <div class="well">
-        <h2 style="color:slategrey;text-align:center;"><strong>Article 1</strong></h2>
-        <p id="p_text">
-          <h3>Top 10 way you can keep you kids safe online</h3> 
+        <p class="h2" style="text-align:center; color:slategray"><strong>Article 1</strong></p><br />
+        <p>
+          <h2>Top 10 way you can keep you kids safe online</h2> 
             Did you know that over 50% of kids have shared/posted their real age online? This is an alarming statisic that....
         </p>
 
     </div>
 
     <div class="well">
-        <h2 style="color:slategrey;text-align:center;"><strong>Article 2</strong></h2>
-        <p id="p_text">
-            <h3>Cyberbullying: A huge problem in Youth of today</h3>
+        <p class="h2" style="text-align:center; color:slategray"><strong>Article 2</strong></p><br />
+        <p>
+            <h2>Cyberbullying:A huge problem in Youth of today</h2>
             Did you know that over 25% of girls and 14% of boys have been victims of cyberbullying? This is a growing problem and it is only going to get worse. According to COX Communications...
         </p>
+
     </div>
 
 </div>
