--- a/Praesidium/Praesidium/Views/CyberSecurity/LawEnforcement.cshtml
+++ b/Praesidium/Praesidium/Views/CyberSecurity/LawEnforcement.cshtml
@@ -4,26 +4,32 @@
 }
 
 <div class="row">
-    <img src="~/Content/Images/cyber-crime.jpg" style="width: 100%;height:300px;margin-left:15px;" class="img-responsive"/>
-    <div class="col-md-12">
-       <h2 id="headers">Law Enforcement's Role in Cyber Security</h2>
+    <img src="~/Content/Images/cyber-crime.jpg" style="width: 80%;" class="img-responsive" />
+    </br>
+    <div class="col-md-10">
 
-        <p id="p_text">
-           Law Enforment plays a very large and important role in the protection of children online.
-            Law Enforment's main goal is education of the general public and thier main way of doing 
-            this is by doing talks in schools and at kids clubs. They also provide resources like websites,
-             fourms and other informational resources for parents and children alike.
+        <p class="h2" style="text-align:center; color:slategray"><strong>Law Enforcement's Role in Cyber Security</strong></p><br /><br />
+
+
+        <p>
+           Law Enforment plays a very large and important role in the protection of children online. Law Enforment's main goal is education of the general public and thier main way of doing this is by doing talks in schools and at kids clubs. They also provide resources like websites, fourms and other informational resources for parents and children alike.
+
         </p>
-    </div>
-</div>
 
-<div class="col-md-12 well" id="borders">
-    <h2 id="headers_borders">Resources for Cyber Security Laws and Legislation</h2>
-    <div class="col-md-12 centered" id="p_textborders">
+    </div>
+
+</div>
+</br>
+
+<div class="col-md-10 well">
+    <p class="h2" style="text-align:center; color:slategray"><strong>Resources for Cyber Security Laws and Legislation</strong></p><br />
+    <div class="col-md-10 centered">
         <ul>
             <li><a href="http://www.mass.gov/anf/research-and-tech/cyber-security/cyber-security-laws/federal-cyber-security-laws.html">Federal Cyber Security Laws</a></li>
             <li><a href="http://www.cox.com/wcm/en/aboutus/datasheet/takecharge/2009-teen-survey.pdf">COX Communications Report on Teen Online Saftey</a></li>
-            <li><a href="https://polarisproject.org/">Polaris Project Website.</a></li>             
+            <li><a href="https://polarisproject.org/">Polaris Project Website.</a></li>
+          
+            
         </ul>
 
     </div>
