--- a/Praesidium/Praesidium/Views/CyberSecurity/Youth.cshtml
+++ b/Praesidium/Praesidium/Views/CyberSecurity/Youth.cshtml
@@ -3,49 +3,45 @@
     ViewBag.Title = "Youth";
 }
 
-
-<div class="container-fluid" id="photo_cont" style="margin-bottom:3%;">
-    <div class="row">
-        <div class="col-md-12">
-            <figure class="effect-caged">
-                <img src="~/Content/Images/cybersecurity1.jpg" style="width:100%;max-height:330px;" />
-                <figcaption>
-                    <h1> Cyber Security - Youth</h1>
-                </figcaption>
-            </figure>
-        </div>
-    </div>
-</div>
-
 <div class="row">
     <div class="col-md-8">
 
-        <h2 id="headers">Youth</h2>
-        <p id="p_text">
-            This is a page where youth (thats you!) can learn about being safe online!
-        </p>
-    </div>
+        <p class="h2" style="text-align:center; color:slategray"><strong>Youth</strong></p><br /><br />
 
-    <div class="col-md-4 align-center" id="borders">
-        <h3 id="headers_borders">Tips for Youth</h3>
-        <ul class="align-left" id="p_textborders">
+
+        <p>
+            <h1>Welcome to the Youth resource page for Cyber Security</h1>
+            This is a page where youth (thats you!) can learn about being safe online!
+
+
+        </p>
+
+    </div>
+    <div class="col-md-4 align-center ">
+        <p class="h3" style="text-align:center;color:slategray;padding-top:25%;"><strong>Tips for youth</strong></p>
+        <ul class="align-left">
             <li>Always tell your parents about people you don't know trying to talk to you</li>
             <li>Never talk to strangers online</li>
             <li>Only go to websites your parents approve</li>
         </ul>
+
+        <br /><br />
+
     </div>
+
 </div>
+</br>
 
 <div class="col-md-8">
-    <h1 id="headers">Resources for staying safe Online</h1>
-    <div><p><br /></p></div>
+    <p class="h2" style="text-align:center; color:slategray"><strong>Resources for staying safe online</strong></p><br />
     <div class="well">
-        <h2 style="color:slategrey;text-align:center;"><strong>Article 1</strong></h2>
-        <p id="p_text">
-            <h3>Sammy and Facebook.</h3>
+        <p class="h2" style="text-align:center; color:slategray"><strong>Article 1</strong></p><br />
+        <p>
+            <h2>Sammy and Facebook.</h2>
             Your friend Sammy has a Facebook and you think thats really cool! Your parents say you can't have a Facebook until your older, so what do you do make a Facebook with a fake birthday or follow your parents rules? What should you do to...
         </p>
+
     </div>
- </div>
+    </div>
 
    
