--- a/Praesidium/Praesidium/Views/Home/About.cshtml
+++ b/Praesidium/Praesidium/Views/Home/About.cshtml
@@ -3,7 +3,7 @@
 }
 
 
-<h1 style="padding-left:12%;" id="headers">About the Ferris Watchdog Program</h1>
+<h1 style="padding-left:12%;">About the Ferris Watchdog Program</h1>
 <br />
 
 <div class="container">
@@ -13,7 +13,7 @@
 
             <!-- Made the ferris image responsive to scaling *Caleb*-->
 
-            <img src="~/Content/Images/TCS_Solutions.png" /> <div" style="border:2px solid black; width:100%;" class="img-responsive" id="p_text" />
+            <img src="~/Content/Images/img04.jpg" style="border: 2px solid black; width:100%;" class="img-responsive" />
         </div>
         <br />
         <div>
