--- a/Praesidium/Praesidium/Views/Shared/_Layout.cshtml
+++ b/Praesidium/Praesidium/Views/Shared/_Layout.cshtml
@@ -1,13 +1,11 @@
 ﻿<!DOCTYPE html>
 <html>
-
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - My ASP.NET Application</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
-    
 
     <script src="~/Scripts/knockout-3.4.0.js"></script>
     <script src="~/Scripts/lodash.js"></script>
@@ -28,7 +26,7 @@
 
     <div class="whitespace">
         <div class="row" style="margin-top:6px; font-size:18px;">
-            <a href="tel:1888373788888" style="margin-left:5%;color:grey;margin-bottom:10%;"><span class="glyphicon glyphicon-phone-alt" style="color:#759bd8;"></span>  National Human Trafficking Hotline <strong style="color:#759bd8">1(888)373-7888</strong></a>
+            <a href="tel:1888373788888" style="margin-left:5%;color:grey;margin-bottom:10%;"><span class="glyphicon glyphicon-phone-alt" style="color:dodgerblue;"></span>  National Human Trafficking Hotline <strong style="color:dodgerblue">1(888)373-7888</strong></a>
         </div>
 
     </div>
