Admin and Site Layout

--- a/Praesidium/Praesidium/Views/CyberSecurity/Index.cshtml
+++ b/Praesidium/Praesidium/Views/CyberSecurity/Index.cshtml
@@ -5,7 +5,6 @@
 
 <div class="container">
     <div class="jumbotron" id="cyber_sec_jumbo">
-        <h1> Cyber Security: Why It's Important</h1>
     </div>
 </div>
  
@@ -36,28 +35,7 @@
             <a href="#" style="margin-left:95px;" class="btn btn-warning bt-md ">Check out the Article!</a></ br></ br>
             </div>
         
-            <div class="col-md-4 align-center" id="borders">
-
-            <!-- Add another article link-->
-            <p class="h3" style="text-align:center;padding-top:8%;padding-bottom:5%;"><strong>Top Tips to Keeping your child safe online.</strong></p>
-            <ul class="align-left">
-                <li>Keep an eye on your child while they are using the internet</li>
-                <li>If you suspect inapropriate activity sit your child down and talk with them.</li>
-                <li>Monitor your childs chats and make sure they are with children their age and are approriate</li>
-                <li>Talk with your child about the dangers of the internet.</li>
-                
-            </ul>
-            <a href="#" style="margin-left:95px;" class="btn btn-danger bt-md">Check out the Article!</a>
-            <br /><br />
-        </div>
-    </div>
-
-    <!-- added in row for the glyphicon table-->
-    <div class="row container-fluid" style="padding-top:7%;padding-left:-5%">
-
-
-        <div id="Quick Tips" class="container-fluid text-center">
-
+        <div class="col-md-8">
             <div class="row slideanim">
                 <div class="col-sm-4">
                     <span class="glyphicon glyphicon-saved logo-table"></span>
@@ -94,7 +72,21 @@
                 </div>
             </div>
         </div>
+            <div class="col-md-4 align-center" style="float: right" id="borders">
 
-
-
+            <!-- Add another article link-->
+            <p class="h3" style="text-align:center;padding-top:8%;padding-bottom:5%;"><strong>Top Tips to Keeping your child safe online.</strong></p>
+            <ul class="align-left">
+                <li>Keep an eye on your child while they are using the internet</li>
+                <li>If you suspect inapropriate activity sit your child down and talk with them.</li>
+                <li>Monitor your childs chats and make sure they are with children their age and are approriate</li>
+                <li>Talk with your child about the dangers of the internet.</li>
+                
+            </ul>
+            <a href="#" style="margin-left:95px;" class="btn btn-danger bt-md">Check out the Article!</a>
+            <br /><br />
+        </div>
     </div>
+
+    <!-- added in row for the glyphicon table-->
+    
