--- a/Praesidium/Praesidium/Views/Admin/Sections.cshtml
+++ b/Praesidium/Praesidium/Views/Admin/Sections.cshtml
@@ -1,39 +1,53 @@
-﻿@model IEnumerable<Praesidium.Data_Models.Admin.ShSySection>
+﻿@model PagedList.IPagedList<Praesidium.Data_Models.Admin.ShSySection>
+@using PagedList.Mvc;
+<link href="~/Content/PagedList.css" rel="stylesheet" type="text/css" />
 
-@{
-    ViewBag.Title = "Sections";
-}
+<div class="panel panel-heading">
+    <h2>Admin Sections</h2>
+</div>
 
-<h2>Sections</h2>
+<div class="panel">
+    <div style="">
+        <br />
+        <h4 class="col-md-11"><b>List of Navigation Items</b></h4>
+        <p style="float: right;" class="col-md-1">
+            @Html.ActionLink("Create New", "SectionsCreate", null, new { @class = "btn btn-info" })
+        </p>
+        <br />
+    </div>
+    <table class="table panel table-striped">
+        <tr>
+            <th>
+                Name
+            </th>
+            <th>
+                Active
+            </th>
+            <th></th>
+        </tr>
 
-<p>
-    @Html.ActionLink("Create New", "SectionsCreate")
-</p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Name)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.IsActive)
-        </th>
-        <th></th>
-    </tr>
-
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Name)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.IsActive)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "SectionsEdit", new { id=item.RecId }) |
-            @Html.ActionLink("Details", "SectionsDetails", new { id=item.RecId }) |
-            @Html.ActionLink("Delete", "SectionsDelete", new { id=item.RecId })
-        </td>
-    </tr>
-}
-
-</table>
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Name)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.IsActive)
+                </td>
+                <td>
+                    @Html.ActionLink(" ", "SectionsEdit", new { id = item.RecId }, new { @class = "btn btn-info glyphicon glyphicon-edit", @title = "Edit Section" })
+                    @Html.ActionLink(" ", "SectionsDetails", new { id = item.RecId }, new { @class = "btn btn-info glyphicon glyphicon-eye-open", @title = "View Details" })
+                    @Html.ActionLink(" ", "SectionsDelete", new { id = item.RecId }, new { @class = "btn btn-danger glyphicon glyphicon-trash", @title = "Delete Section" })
+                </td>
+            </tr>
+        }
+    </table>
+    @if (Model.PageCount > 1)
+    {
+        <div style="text-align: center;">
+            @Html.PagedListPager(Model, page => Url.Action("Sections",
+         new { page }))
+        </div>
+    }
+</div>
