--- a/Praesidium/Praesidium/Views/Admin/UserTypes.cshtml
+++ b/Praesidium/Praesidium/Views/Admin/UserTypes.cshtml
@@ -1,39 +1,48 @@
-﻿@model IEnumerable<Praesidium.Data_Models.Admin.ShUserType>
+﻿@model PagedList.IPagedList<Praesidium.Data_Models.Admin.ShUserType>
+@using PagedList.Mvc;
+<link href="~/Content/PagedList.css" rel="stylesheet" type="text/css" />
 
-@{
-    ViewBag.Title = "UserTypes";
-}
 
-<h2>UserTypes</h2>
+<div class="panel panel-heading">
+    <h2>Admin User Types</h2>
+</div>
 
-<p>
-    @Html.ActionLink("Create New", "UserTypesCreate")
-</p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Type)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.IsDeleted)
-        </th>
-        <th></th>
-    </tr>
+<div class="panel">
+    <div style="">
+        <br />
+        <h4 class="col-md-11"><b>List of Navigation Items</b></h4>
+        <p style="float: right;" class="col-md-1">
+            @Html.ActionLink("Create New", "UserTypesCreate", null, new { @class = "btn btn-info" })
+        </p>
+        <br />
+    </div>
+    <table class="table">
+        <tr>
+            <th>
+                Type
+            </th>
+            <th>
+                Deleted
+            </th>
+            <th></th>
+        </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Type)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.IsDeleted)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "UserTypesEdit", new { id=item.RecId }) |
-            @Html.ActionLink("Details", "UserTypesDetails", new { id=item.RecId }) |
-            @Html.ActionLink("Delete", "UserTypesDelete", new { id=item.RecId })
-        </td>
-    </tr>
-}
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Type)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.IsDeleted)
+                </td>
+                <td>
+                    @Html.ActionLink(" ", "UserTypesEdit", new { id = item.RecId }, new { @class = "btn btn-info glyphicon glyphicon-edit", @title = "Edit User Type" })
+                    @Html.ActionLink(" ", "UserTypesDetails", new { id = item.RecId }, new { @class = "btn btn-info glyphicon glyphicon-eye-open", @title = "View Details" })
+                    @Html.ActionLink(" ", "UserTypesDelete", new { id = item.RecId }, new { @class = "btn btn-danger glyphicon glyphicon-trash", @title = "Delete User Type" })
+                </td>
+            </tr>
+        }
 
-</table>
+    </table>
+    </div>
