--- a/Praesidium/Praesidium/Views/Admin/Users.cshtml
+++ b/Praesidium/Praesidium/Views/Admin/Users.cshtml
@@ -1,51 +1,66 @@
-﻿@model IEnumerable<Praesidium.Data_Models.Admin.ShUser>
+﻿@model PagedList.IPagedList<Praesidium.Data_Models.Admin.ShUser>
+@using PagedList.Mvc;
+<link href="~/Content/PagedList.css" rel="stylesheet" type="text/css" />
 
-@{
-    ViewBag.Title = "Users";
-}
+<div class="panel panel-heading">
+    <h2>Admin Users</h2>
+</div>
 
-<h2>Users</h2>
+<div class="panel">
+    <div style="">
+        <br />
+        <h4 class="col-md-11"><b>List of Navigation Items</b></h4>
+        <p style="float: right;" class="col-md-1">
+            @Html.ActionLink("Create New", "UsersCreate", null, new { @class = "btn btn-info" })
+        </p>
+        <br />
+    </div>
+    <table class="table panel table-striped">
+        <tr>
+            <th>
+                First Name
+            </th>
+            <th>
+                Last Name
+            </th>
+            <th>
+                Username
+            </th>
+            <th>
+                Email
+            </th>
+            <th></th>
+        </tr>
 
-<p>
-    @Html.ActionLink("Create New", "UsersCreate")
-</p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.FirstName)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.LastName)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Username)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.email)
-        </th>
-        <th></th>
-    </tr>
-
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.FirstName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.LastName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Username)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.email)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "UsersEdit", new { id=item.RecId }) |
-            @Html.ActionLink("Details", "UsersDetails", new { id=item.RecId }) |
-            @Html.ActionLink("Delete", "UsersDelete", new { id=item.RecId })
-        </td>
-    </tr>
-}
-
-</table>
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.FirstName)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.LastName)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Username)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.email)
+                </td>
+                <td>
+                    @Html.ActionLink(" ", "UsersEdit", new { id = item.RecId }, new { @class = "btn btn-info glyphicon glyphicon-edit", @title = "Edit User" })
+                    @Html.ActionLink(" ", "UsersDetails", new { id = item.RecId }, new { @class = "btn btn-info glyphicon glyphicon-eye-open", @title = "View Details" })
+                    @Html.ActionLink(" ", "UsersDelete", new { id = item.RecId }, new { @class = "btn btn-danger glyphicon glyphicon-trash", @title = "Delete Users" })
+                </td>
+            </tr>
+        }
+        
+    </table>
+    @if (Model.PageCount > 1)
+    {
+        <div style="text-align: center;">
+            @Html.PagedListPager(Model, page => Url.Action("Sections",
+         new { page }))
+        </div>
+    }
+</div>
