--- a/Praesidium/Praesidium/Content/Site.css
+++ b/Praesidium/Praesidium/Content/Site.css
@@ -75,6 +75,7 @@ footer {
     font-weight: bold;
 }
 
+
 .navbar-nav {
     background-color: #3c8dbc;
     border-color: #3c8dbc;
@@ -82,6 +83,7 @@ footer {
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
 }
+
 
 .searchAreasm {
     padding-left:5px;
@@ -99,6 +101,8 @@ footer {
         /*padding-top: 15px;*/
     }
 
+
+
     .navbar-inverse .navbar-nav > li > a {
         color: #fff;
     }
@@ -111,7 +115,7 @@ footer {
 
 .whitespace {
     background-color: #ecf0f5;
-    height: 150px;
+    height: 90px;
     position: fixed;
     width: 100%;
     top: 0;
@@ -416,18 +420,13 @@ text-shadow:  #333333 0.1em 0.1em 0.2em;
 }
 
 .dropdown {
-    height: 65px;
-}
-
-li > .dropdown .open {
-    height: 65px;
-    background-color: white;
+    height: 50px;
 }
 
 .dropdown > a:hover {
     background-color: rgba(0,60,128,0.82) !important;
     color: #333;
-    height: 65px;
+    height: 50px;
 }
 
 .dropdown-menu {
@@ -435,13 +434,18 @@ li > .dropdown .open {
     border: none;
 }
 
+    .dropdown-menu:before {
+       visibility:hidden;
+    }
+ 
+
 .dropdown-menu > li > a {
     font-weight: bold !important;
     color: #fff;
     background-color: rgba(0,60,128,0.82);
 }
 
-.dropdown-menu > li > a:hover {
+.dropdown-menu > li > a:hover:after {
     background-color: rgba(0,60,128,0.82) !important;
 }
 
@@ -449,6 +453,42 @@ li > .dropdown .open {
     border-top-color: rgba(0,60,128,0.82);
     border-bottom-color: rgba(0,60,128,0.82);
 }
+
+/* Nav edits*/
+.navbar-nav > li > a:hover {
+    background-color: rgba(0,60,128,0.82) !important;
+     position: relative;
+     transition: all 1s;
+     color: #fff;
+     z-index: 1;
+}
+.navbar-nav > li > a:after {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
+  width: 0%;
+  content: '.';
+  color: transparent;
+  background: #aaa;
+  height: 1px;
+   text-align: left;
+  content: '.';
+  margin: 0;
+  opacity: 0;
+   
+}
+.navbar-nav > li > a:hover:after {
+    width: 100%;
+    z-index: -10;
+    animation: fill 1s forwards;
+    -webkit-animation: fill 1s forwards;
+    -moz-animation: fill 1s forwards;
+    opacity: 1;
+}
+/* /nav edits*/
+
 
 .navbar-header {
     margin-top: 0 !important;
