--- a/Praesidium/Praesidium/Content/Site.css
+++ b/Praesidium/Praesidium/Content/Site.css
@@ -36,16 +36,13 @@ textarea {
     right: 10px;
     height: 100px;
     width: 150px;
-    background-color: #1272e8;
+    background-color: indianred;
     color: black;
     font-size: 25px;
     border: 0px;
     border-radius: 5px;
 }
 
-    #get-away:hover {
-        background-color: #488bf6;
-    }
 
 footer {
     display: block;
@@ -67,7 +64,7 @@ footer {
 }
 
 .navbar-inverse  {
-    height: 75px !important;
+    height: 78px !important;
     background-color: #3c8dbc;
     border-color: #3c8dbc;
     width: 100%;
@@ -92,8 +89,9 @@ footer {
 }
 
     .navbar-inverse .navbar-brand {
-        height: 65px;
+        height: 70px;
         color: #fff;
+        margin-left:-20px;
     }
 
     .navbar-inverse .navbar-collapse, .navbar-inverse .navbar-form {
@@ -122,39 +120,8 @@ footer {
     z-index: 20;
 }
 
-.searchArea {
-    z-index: 1400;
-    background-color: #3c8dbc !important;
-    width: 10%;
-    height: 30px !important;
-    position: fixed;
-    top: 110px;
-    right: 7.5%;
-    min-width: 200px;
-}
 
 
-.searchArea:before {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    border-bottom: 30px solid white;
-    border-right: 30px solid #3c8dbc;
-    width: 0;
-}
-
-.searchBar {
-    margin-top: 2px;
-    margin-left: 85px;
-    border-radius: 5px;
-    border: none;
-    position: fixed;
-    top: 110px;
-    right: 8%;
-    width: 90%;
-    padding-left:5px;
-}
 .Contributer {
     text-align: left;
 }
@@ -292,8 +259,6 @@ figure.effect-caged p {
 	transition: opacity 0.35s, transform 0.35s;
     text-align:center;
   
-
-
 }
 
 figure.effect-caged p {
@@ -492,13 +457,15 @@ text-shadow:  #333333 0.1em 0.1em 0.2em;
 
 .navbar-header {
     margin-top: 0 !important;
+    
 }
 
 .navbar-brand {
     width: 170px !important;
     background-color: #3c8dbc !important;
-    padding-top: 20px;
+    padding-top: 20px;  
 }
+
 
 
 
