--- a/Praesidium/Praesidium/Views/Shared/_Layout.cshtml
+++ b/Praesidium/Praesidium/Views/Shared/_Layout.cshtml
@@ -24,9 +24,9 @@
    <!-- Div for trafficking hotline-->
 
 
-    <div class="whitespace" style="text-align: center;">
+    <div class="whitespace">
         <div class="row" style="margin-top:6px; font-size:18px;">
-            <a href="tel:1888373788888" style="margin-left:5%;color:grey;margin-bottom:10%;"><span class="glyphicon glyphicon-phone-alt" style="color:dodgerblue;"></span>  National Human Trafficking Hotline <strong style="color:dodgerblue">1(888)373-7888</strong></a>
+            <a href="tel:1888373788888" style="margin-left:8%;color:grey;margin-bottom:10%;"><span class="glyphicon glyphicon-phone-alt" style="color:dodgerblue;"></span>  National Human Trafficking Hotline <strong style="color:dodgerblue">1(888)373-7888</strong></a>
         </div>
 
     </div>
@@ -41,7 +41,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 @Html.ActionLink(" ", "Index", "Home", new { area = "" }, new { @class = "navbar-brand", @style = ""})
-                <img alt="Widget View" src="@Url.Content("~/Content/Images/TCS_Solutions.png")" style="height: 70px; padding-top: 5px;"> 
+                <img alt="Widget View" src="@Url.Content("~/Content/Images/TCS_Solutions.png")" style="height: 70px; padding-top: 5px;margin-left:-135px;"> 
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav" style="float: right;">
@@ -54,16 +54,8 @@
                             Search
                         </a>
                         <div class="searchArea accordion-body collapse" id="searchArea">
-                            <input id="txtSearchlg" class="searchBar" type="text" style="width:150px;" />
-                        </div>
-                        <div class="searchAreasm hidden-lg hidden-md">
-                            <form class="form-inline" role="form">
-                                <div class="icon-addon addon-md">
-                                    <input id="txtSearchsm" class="form-control" type="text" style="padding-left:5px;" placeholder="Search...">
-                                    <label for="txtSearchsm" class="glyphicon glyphicon-search"></label>
-                                </div>
-                            </form>
-                        </div>
+                            <input id="txtSearchlg" class="searchBar" type="text" style="width:150px;" placeholder="Keywords.." />
+                        </div>             
                     </li>
 
                 </ul>
